--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" width="device-width,initial-scale=1" />
   <title>MindAR — Business Card AR</title>
 
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
@@ -106,7 +106,7 @@
   <a-scene
     mindar-image="imageTargetSrc: https://raw.githubusercontent.com/Gitboi46/Ar-business-card/main/targets%20(1)%20(1).mind;
                   filterMinCF:0.0001; 
-                  filterBeta:0.001;  <!-- Tuned lower for smoother tracking (less jitter, minimal lag) -->
+                  filterBeta:0.001;
                   warmupTolerance:5;
                   missTolerance:5;"
     color-space="sRGB"
@@ -134,14 +134,13 @@
              muted>
       </video>
 
-      <!-- Icons remain the same -->
       <img id="callIconImg" src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'><rect width='48' height='48' rx='12' fill='%23007AFF'/><path fill='white' d='M34.1 31.6l-4.9-.8c-.7-.1-1.4.1-1.9.6l-3.1 3.1c-4.9-2.5-8.9-6.5-11.4-11.4l3.1-3.1c.5-.5.7-1.2.6-1.9l-.8-4.9c-.2-1.2-1.3-2.1-2.5-2.1H10c-1.4 0-2.6 1.2-2.5 2.6C8 27 21 40 34.4 40c1.4 0 2.6-1.1 2.6-2.5v-3.5c0-1.2-.9-2.3-2.9-2.4z'/></svg>">
       <img id="webIconImg" src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'><rect width='48' height='48' rx='12' fill='%23FF6D00'/><circle cx='24' cy='24' r='14' stroke='white' stroke-width='3' fill='none'/><path stroke='white' stroke-width='3' fill='none' d='M24 10v28M10 24h28'/></svg>">
       <img id="emailIconImg" src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'><rect width='48' height='48' rx='12' fill='%2306C755'/><path fill='white' d='M6 12l18 13.5L42 12v-2H6v2zm0 6v16h36V18l-18 13.5L6 18z'/></svg>">
 
       <img id="fbIconImg" src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'><rect width='48' height='48' rx='12' fill='%231877F2'/><path fill='white' d='M28 16h4.5V10H28c-5.5 0-8 3-8 8v4h-4v6h4v10h6V28h4.5l1.5-6H26v-3c0-1.5 1.2-3 2-3z'/></svg>">
       <img id="igIconImg" src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='256' height='256' viewBox='0 0 24 24' fill='white'><rect width='24' height='24' rx='4' fill='%23E1306C'/><path d='M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 5a5 5 0 100 10 5 5 0 000-10zm6.5-.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0z'/></svg>">
-      <img id="lnIconImg" src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'><rect width='48' height='48' rx='12' fill='%230A66C2'/><rect x='10' y='18' width='6' height='20' fill='white'/><circle cx='13' cy='12.5' r='3.5' fill='white'/><path fill='white' d='M22 18h6v3c1-2 3.5-3.5 6.5-3.5C39 17.5 42 20 42 26.5V38h-6V27c0-3-1.5-4.5-3.5-4.5S29 24 29 27v11h-7V18z'/></svg>">
+      <img id="lnIconImg" src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'><rect width='48' height='48' rx='12' fill='%230A66C2'/><rect x='10' y='18' width='6' height='20' fill='white'/><circle cx='13' cy='12.5' r='3.5' fill='white'/><path fill='white' d='M22 18h6v31-2 3.5-3.5 6.5-3.5C39 17.5 42 20 42 26.5V38h-6V27c0-3-1.5-4.5-3.5-4.5S29 24 29 27v11h-7V18z'/></svg>">
     </a-assets>
 
     <a-camera position="0 0 0"
@@ -150,36 +149,38 @@
               raycaster="objects:.clickable">
     </a-camera>
 
+    <!-- Anchor (raw tracking - raycaster works here) -->
     <a-entity id="mainMarker" mindar-image-target="targetIndex:0">
+      <!-- Smoothed content group (visuals only) -->
+      <a-entity id="contentGroup">
+        <a-plane id="videoPlane"
+                 class="clickable"
+                 position="0 0.5 0.45"
+                 rotation="90 0 0"
+                 width="2.1"
+                 height="1.4"
+                 chromakey-material="src: #arVideo; color: #0000FF; threshold: 0.4; smoothness: 0.15"
+                 visible="false">
+        </a-plane>
 
-      <a-plane id="videoPlane"
-               class="clickable"
-               position="0 0.5 0.45"
-               rotation="90 0 0"
-               width="2.1"
-               height="1.4"
-               chromakey-material="src: #arVideo; color: #0000FF; threshold: 0.4; smoothness: 0.15"
-               visible="false">
-      </a-plane>
+        <a-plane id="bottomVideoPlane"
+                 class="clickable"
+                 position="0 -0.65 0.01"
+                 rotation="0 0 0"
+                 width="1.0"
+                 height="0.56"
+                 material="src: #bottomVideo; shader: flat;"
+                 visible="false">
+        </a-plane>
 
-      <a-plane id="bottomVideoPlane"
-               class="clickable"
-               position="0 -0.65 0.01"
-               rotation="0 0 0"
-               width="1.0"
-               height="0.56"
-               material="src: #bottomVideo; shader: flat;"
-               visible="false">
-      </a-plane>
+        <a-plane id="callBtnAR" class="clickable" position="-0.65 0.22 0.01" width="0.20" height="0.20" material="src:#callIconImg; transparent:true;" link-trigger="action: call" visible="false"></a-plane>
+        <a-plane id="websiteBtnAR" class="clickable" position="-0.65 -0.00 0.01" width="0.20" height="0.20" material="src:#webIconImg; transparent:true;" link-trigger="action: website" visible="false"></a-plane>
+        <a-plane id="emailBtnAR" class="clickable" position="-0.65 -0.22 0.01" width="0.20" height="0.20" material="src:#emailIconImg; transparent:true;" link-trigger="action: email" visible="false"></a-plane>
 
-      <!-- Buttons remain the same -->
-      <a-plane id="callBtnAR" class="clickable" position="-0.65 0.22 0.01" width="0.20" height="0.20" material="src:#callIconImg; transparent:true;" link-trigger="action: call" visible="false"></a-plane>
-      <a-plane id="websiteBtnAR" class="clickable" position="-0.65 -0.00 0.01" width="0.20" height="0.20" material="src:#webIconImg; transparent:true;" link-trigger="action: website" visible="false"></a-plane>
-      <a-plane id="emailBtnAR" class="clickable" position="-0.65 -0.22 0.01" width="0.20" height="0.20" material="src:#emailIconImg; transparent:true;" link-trigger="action: email" visible="false"></a-plane>
-
-      <a-plane id="fbBtnAR" class="clickable" position="0.65 0.22 0.01" width="0.20" height="0.20" material="src:#fbIconImg; transparent:true;" link-trigger="action: facebook" visible="false"></a-plane>
-      <a-plane id="igBtnAR" class="clickable" position="0.65 0.00 0.01" width="0.20" height="0.20" material="src:#igIconImg; transparent:true;" link-trigger="action: instagram" visible="false"></a-plane>
-      <a-plane id="lnBtnAR" class="clickable" position="0.65 -0.22 0.01" width="0.20" height="0.20" material="src:#lnIconImg; transparent:true;" link-trigger="action: linkedin" visible="false"></a-plane>
+        <a-plane id="fbBtnAR" class="clickable" position="0.65 0.22 0.01" width="0.20" height="0.20" material="src:#fbIconImg; transparent:true;" link-trigger="action: facebook" visible="false"></a-plane>
+        <a-plane id="igBtnAR" class="clickable" position="0.65 0.00 0.01" width="0.20" height="0.20" material="src:#igIconImg; transparent:true;" link-trigger="action: instagram" visible="false"></a-plane>
+        <a-plane id="lnBtnAR" class="clickable" position="0.65 -0.22 0.01" width="0.20" height="0.20" material="src:#lnIconImg; transparent:true;" link-trigger="action: linkedin" visible="false"></a-plane>
+      </a-entity>
     </a-entity>
 
     <a-entity light="type:ambient; intensity:1; color:#ffffff"></a-entity>
@@ -187,7 +188,8 @@
 
   <script>
     const sceneEl = document.querySelector('a-scene');
-    const anchor = document.querySelector('#mainMarker');  // The mindar-image-target entity
+    const anchor = document.querySelector('#mainMarker');
+    const smoothGroup = document.querySelector('#contentGroup');
     const markerStatus = document.getElementById('markerStatus');
 
     const videoPlane = document.getElementById('videoPlane');
@@ -226,14 +228,11 @@
       }
     }
 
-    // Use scene-level targetFound/targetLost for consistency with smooth example
     sceneEl.addEventListener('targetFound', () => {
       markerStatus.classList.add('found');
       markerStatus.textContent = 'Target Found';
 
-      document.querySelectorAll('#mainMarker .clickable').forEach(el => el.setAttribute('visible', true));
-      videoPlane.setAttribute("visible", true);
-      bottomVideoPlane.setAttribute("visible", true);
+      document.querySelectorAll('#contentGroup .clickable, #videoPlane, #bottomVideoPlane').forEach(el => el.setAttribute('visible', true));
       
       arVideo.play().catch(() => {});
       bottomVideo.play().catch(() => {});
@@ -245,13 +244,16 @@
       markerStatus.classList.remove('found');
       markerStatus.textContent = 'Target Not Found';
 
-      document.querySelectorAll('#mainMarker .clickable, #videoPlane, #bottomVideoPlane').forEach(el => el.setAttribute('visible', false));
+      document.querySelectorAll('#contentGroup .clickable, #videoPlane, #bottomVideoPlane').forEach(el => el.setAttribute('visible', false));
 
       arVideo.pause(); arVideo.currentTime = 0;
       bottomVideo.pause(); bottomVideo.currentTime = 0;
     });
 
-    // Manual raycast and click handling (unchanged)
+    sceneEl.addEventListener('arReady', () => console.log('MindAR ready'));
+    sceneEl.addEventListener('arError', e => console.error('MindAR error:', e.detail));
+
+    // Manual raycast for reliable clicking
     (function setupManualRaycast() {
       const THREE = AFRAME.THREE;
       const raycaster = new THREE.Raycaster();
@@ -281,7 +283,7 @@
 
       function onPointerDown(evt) {
         const cx = evt.touches ? evt.touches[0].clientX : evt.clientX;
-        const cy = evt.touches ? evt.touches[0].clientY : evt.touches[0].clientY;
+        const cy = evt.touches ? evt.touches[0].clientY : evt.clientY;
         const hit = getIntersections(cx, cy);
         if (hit.length) {
           const el = hit[0];
@@ -305,13 +307,13 @@
       if (!userInteracted) {
         userInteracted = true;
         arVideo.muted = false;
-        console.log('Audio unlocked for top video only');
+        console.log('Audio unlocked for top video');
       }
     }
     document.addEventListener('touchstart', enableVideoOnInteraction, { once: true });
     document.addEventListener('click', enableVideoOnInteraction, { once: true });
 
-    // === ADDED: Manual smoothing loop (the key to no-shake stability) ===
+    // Smoothing applied only to the visual content group (keeps raycaster working)
     const targetMatrix = new THREE.Matrix4();
     const currentMatrix = new THREE.Matrix4();
 
@@ -321,16 +323,16 @@
           targetMatrix.copy(anchor.object3D.matrixWorld);
         }
 
-        const lerpAmount = 1.85;  // High value for aggressive smoothing with overshoot (adjust 1.0–2.5 if needed)
+        const lerpAmount = 1.85;
 
-        currentMatrix.copy(anchor.object3D.matrixWorld);
+        currentMatrix.copy(smoothGroup.object3D.matrixWorld);
         currentMatrix.lerp(targetMatrix, lerpAmount);
 
-        anchor.object3D.matrixWorld.copy(currentMatrix);
-        anchor.object3D.matrixWorld.decompose(
-          anchor.object3D.position,
-          anchor.object3D.quaternion,
-          anchor.object3D.scale
+        smoothGroup.object3D.matrixWorld.copy(currentMatrix);
+        smoothGroup.object3D.matrixWorld.decompose(
+          smoothGroup.object3D.position,
+          smoothGroup.object3D.quaternion,
+          smoothGroup.object3D.scale
         );
 
         requestAnimationFrame(tick);
