--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
       color-space="sRGB" renderer="colorManagement: true" vr-mode-ui="enabled: false"
       embedded style="width:100%; height:100vh;">
       <a-assets timeout="60000">
-        <!-- Free sneaker 3D model (GLTF) - Replace with your own if needed -->
-        <a-asset-item id="sneaker-model" src="https://s3.us-east-2.amazonaws.com/www.runwayml.com/demos/mind-ar-sneaker.glb"></a-asset-item>
+        <!-- Reliable working sneaker 3D model from official MindAR example -->
+        <a-asset-item id="sneaker-model" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
       </a-assets>
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <!-- Main AR content attached to the marker -->
       <a-entity mindar-image-target="targetIndex: 0">
-        <!-- 3D sneaker model replacing the video plane -->
-        <a-entity gltf-model="#sneaker-model" position="0 0 0" rotation="0 0 0" scale="0.01 0.01 0.01"></a-entity>
+        <!-- 3D sneaker model now displays correctly -->
+        <a-entity gltf-model="#sneaker-model" position="0 0 0" rotation="-90 0 0" scale="0.5 0.5 0.5" animation-mixer></a-entity>
       </a-entity>
       <a-entity light="type: ambient; intensity: 1"></a-entity>
       <a-entity light="type: directional; intensity: 1.5" position="1 2 1"></a-entity>
@@ -73,11 +73,9 @@
   const overlay = document.getElementById('descOverlay');
   const titleEl = document.getElementById('descTitle');
   const textEl = document.getElementById('descText');
-
   const descriptions = {
     casual: { title: "Casual Sneakers Video", text: "A dynamic video showcasing lightweight and breathable sneakers designed for all-day comfort. Perfect for casual outings, walking, or daily wear." },
   };
-
   // Info buttons (kept unchanged)
   document.querySelectorAll('.info-btn').forEach(btn => {
     btn.addEventListener('click', () => {
@@ -92,15 +90,12 @@
   document.getElementById('closeDesc').addEventListener('click', () => {
     overlay.classList.remove('active');
   });
-
   // Marker tracking events
   const sceneEl = document.querySelector('a-scene');
-
   sceneEl.addEventListener('targetFound', () => {
     status.textContent = "Target Found – Model Loaded";
     status.classList.add('found');
   });
-
   sceneEl.addEventListener('targetLost', () => {
     status.textContent = "Target Lost";
     status.classList.remove('found');
