--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       embedded style="width:100%; height:100vh;">
       <a-assets timeout="60000">
         <!-- Reliable working sneaker 3D model from official MindAR example -->
-        <a-asset-item id="sneaker-model" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
+        <a-asset-item id="sneaker-model" src="https://raw.githubusercontent.com/Gitboi46/Ar-Shoe-test/main/Shoe%2001%20(1).glb"></a-asset-item>
       </a-assets>
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <!-- Main AR content attached to the marker -->
