--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
       color-space="sRGB" renderer="colorManagement: true" vr-mode-ui="enabled: false"
       embedded style="width:100%; height:100vh;">
       <a-assets timeout="60000">
-        <!-- Reliable working sneaker 3D model from official MindAR example -->
+        <!-- Your sneaker 3D model -->
         <a-asset-item id="sneaker-model" src="https://raw.githubusercontent.com/Gitboi46/Ar-Shoe-test/main/Shoe%2001%20(1).glb"></a-asset-item>
       </a-assets>
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <!-- Main AR content attached to the marker -->
       <a-entity mindar-image-target="targetIndex: 0">
-        <!-- 3D sneaker model now displays correctly -->
-        <a-entity gltf-model="#sneaker-model" position="0 0 0" rotation="-90 0 0" scale="0.5 0.5 0.5" animation-mixer></a-entity>
+        <!-- 3D sneaker model with reduced size -->
+        <a-entity gltf-model="#sneaker-model" position="0 0 0" rotation="-90 0 0" scale="0.3 0.3 0.3" animation-mixer></a-entity>
       </a-entity>
       <a-entity light="type: ambient; intensity: 1"></a-entity>
       <a-entity light="type: directional; intensity: 1.5" position="1 2 1"></a-entity>
@@ -74,7 +74,7 @@
   const titleEl = document.getElementById('descTitle');
   const textEl = document.getElementById('descText');
   const descriptions = {
-    casual: { title: "Casual Sneakers Video", text: "A dynamic video showcasing lightweight and breathable sneakers designed for all-day comfort. Perfect for casual outings, walking, or daily wear." },
+    casual: { title: "Casual Sneakers Video", text: "A dynamic video showcasing lightweight and breathable sneakers designed for all-day comfort. Perfect for casual outings, walking or daily wear." },
   };
   // Info buttons (kept unchanged)
   document.querySelectorAll('.info-btn').forEach(btn => {
